# purplle-final-submission---vasanth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  presentation.tex  pyproject.toml  requirements-pipeline.txt  requirements.txt
app/: __init__.py  anomalies.py  config.py  db.py  errors.py  funnel.py  health.py  heatmap.py  ingestion.py  logging_mw.py  main.py  metrics.py  models.py
config/: alembic.ini  store_layout.json
config/alembic/: env.py
config/alembic/versions/: 001_initial.py  002_add_line_items.py
dashboard/: live.py  terminal_dashboard.py
dashboard/web/: app.js  index.html  styles.css
docs/: CHOICES.md  DESIGN.md
pipeline/: __init__.py  cross_camera.py  detect.py  emit.py  post_pos.py  preview.py  reentry.py  run_linux.sh  run_windows.cmd  run_windows.ps1  staff.py  tracker.py  zones.py
tests/: conftest.py  test_anomalies.py  test_endpoints.py  test_extended.py  test_funnel.py  test_ingest.py  test_metrics.py  test_pipeline.py
